@@ -1,3 +1,9 @@
+Mon Jul  7 15:13:09 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannelFactory.cpp:
+        
+          Restored creation of ActiveEventChannelNames monitor.
+
 Mon Jul  7 12:09:10 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/examples/Notify/MC/TkMonitor/README:
